<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools">
	
	<data>
	
	</data>
	
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/colorPrimary"
			tools:context=".fragments.CameraFragment">
		
		
		<ImageView
				android:id="@+id/imageView"
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:background="#FFFFFF"
				android:scaleType="centerCrop"
				app:layout_constraintBottom_toTopOf="@+id/gallery_button"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="1.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_bias="1.0"
				tools:src="@tools:sample/avatars[0]" />
		
		<ProgressBar
				android:id="@+id/progress_circular"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="gone"
				app:layout_constraintBottom_toTopOf="@+id/findText_Button"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/imageView" />
		
		<ImageButton
				android:id="@+id/camera_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:background="@drawable/button_shape"
				android:src="@drawable/ic_photo_camera_black_24dp"
				android:text="@string/button_camera"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/imageView" />
		
		
		<ImageButton
				android:id="@+id/gallery_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:background="@drawable/button_shape"
				android:src="@drawable/ic_photo_black_24dp"
				android:text="@string/button_gallery"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent" />
		
		<Button
				android:id="@+id/findText_Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/text_button_shape"
				android:padding="10dp"
				android:text="@string/find_button"
				android:textAllCaps="false"
				android:textColor="@color/colorPrimary"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/gallery_button"
				app:layout_constraintStart_toEndOf="@+id/camera_button" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>